Fixed too small logo

--- a/src/assets/stylesheets/scss/components/_grid.scss
+++ b/src/assets/stylesheets/scss/components/_grid.scss
@@ -70,7 +70,7 @@
         >*:not(.co-grid) {
             width: 100%;
         }
-        img {
+        img, picture {
             width: auto !important;
         }
     }
@@ -82,7 +82,7 @@
         >*:not(.co-grid) {
             width: 100%;
         }
-        img {
+        img, picture {
             width: auto !important;
         }
     }
